--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,8 @@
       
     <ul>
       <li><h3>FOLLOW US</h3></li>
-      <li><a href="javascript:void(0)">Facebook</a></li>
+      <li><a href="javascript:void(0)"> Facebook
+</a></li>
       <li><a href="javascript:void(0)">Twitter</a></li>
       <li><a href="javascript:void(0)">YouTube</a></li>
       <li><a href="javascript:void(0)">Pinterest</a></li>
