--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,26 @@
 <div id="sidebar">
+<div class="sidebar-head">{% include icons/one-solution.html %}</div>
         <ul class="sweep-to-right">
-            <li><a class="hvr-sweep-to-right" href="http://www.google.com">HOME</a>
+            <li><a class="hvr-sweep-to-right" href="http://www.google.com"><i class="icon-mobile">{% include icons/home24x24.html %}</i>HOME</a>
             </li>
-            <li><a class="hvr-sweep-to-right" href="#">YOUR BUSINESS</a>
+            <li><a class="hvr-sweep-to-right" href="#"><i class="icon-mobile">{% include icons/business24x24.html %}</i>YOUR BUSINESS</a>
             </li>
-            <li><a class="hvr-sweep-to-right" href="#">SERVICES</a>
+            <li><a class="hvr-sweep-to-right" href="#"><i class="icon-mobile">{% include icons/services24x24.html %}</i>SERVICES</a>
             </li>
-            <li><a class="hvr-sweep-to-right" href="#">PRODUCTS</a>
+            <li><a class="hvr-sweep-to-right" href="#"><i class="icon-mobile">{% include icons/products24x24.html %}</i>PRODUCTS</a>
             </li>
-            <li><a class="hvr-sweep-to-right" href="#">WHY OCS?</a>
+            <li><a class="hvr-sweep-to-right" href="#"><i class="icon-mobile">{% include icons/why-ocs24x24.html %}</i>WHY OCS?</a>
             </li>
-            <li><a class="hvr-sweep-to-right" href="#">SUSTAINABILITY</a>
+            <li><a class="hvr-sweep-to-right" href="#"><i class="icon-mobile">{% include icons/sustainability24x24.html %}</i>SUSTAINABILITY</a>
             </li>
         </ul>
+        <div class="social-side-contain">
+            <a href="#">{% include icons/facebook.html %} </a>
+            <a href="#">{% include icons/twitter.html %} </a>
+            <a href="#">{% include icons/instagram.html %} </a>
+            <a href="#">{% include icons/pinterest.html %} </a>
+            <a href="#">{% include icons/youtube.html %}</a>
+        </div>
     </div>
 
     <div class="logo"><img src="../img/ocs-logo.svg"></div>
