--- a/assets/css/1-tools/_fonts.scss
+++ b/assets/css/1-tools/_fonts.scss
@@ -3,3 +3,9 @@
   font-weight: 700;
   src: url('../fonts/Bitstream - Futura MdCn BT Medium.ttf') format('truetype');
 }
+
+@font-face {
+	font-family: 'TypefaceSix';
+	font-weight: 700;
+	src: url('../fonts/typefacesix.ttf') format('truetype');
+}
