--- a/assets/css/1-tools/_fonts.scss
+++ b/assets/css/1-tools/_fonts.scss
@@ -9,3 +9,9 @@
 	font-weight: 700;
 	src: url('../fonts/typefacesix.ttf') format('truetype');
 }
+
+@font-face {
+	font-family: 'FuturaBoldHead';
+	font-weight: 700;
+	src: url('../fonts/Bitstream - Futura Hv BT Heavy.ttf') format('truetype');
+}
