--- a/assets/css/5-sections/_header.sass
+++ b/assets/css/5-sections/_header.sass
@@ -56,7 +56,7 @@
         box-shadow: 3px 0 5px $ocs-black
         ul li 
             transition: .3s 
-            border-left: 35px solid $ocs-black
+            border-left: 40px solid $ocs-black
             border-bottom: 1px solid $ocs-offwhite
 
 
@@ -73,14 +73,15 @@
 
             
         ul li a 
+            font-family: $ocsHeadBold
             color: $ocs-offwhite
             display: block
-            font-size: 1.3em
-            line-height: 102%
+            font-size: 1.1em
+            font-weight: 900
             text-decoration: none
-            padding: 20px 20px
+            padding: 20px 5px
             transition: .3s
-            
+
             &:hover a 
                 color: $ocs-offwhite
         .social-side-contain
@@ -105,9 +106,9 @@
 
     .icon-mobile       
         width: 20px
-        height: 20px
+        height: 21px
         padding-right: 20px
-        margin-left: -25px
+        margin-left: -20px
 
     .button:focus + #sidebar 
         transform: translate(0px, 0)
