--- a/assets/css/5-sections/_indexgrid.scss
+++ b/assets/css/5-sections/_indexgrid.scss
@@ -1,141 +1,63 @@
-@mixin grid-item-columns($columns) {
-  width: (100% / 12) * $columns;
-}
-
-#content {
-    margin: 4em 0 4em 0 !important;
-}
-
-.grid-items {
+.hero {  
   ///////////////////////////////////////////////////////////////////////////////////
-  $base-accent-color: $ocs-red !default;
-  $base-background-color: white !default;
-  $medium-screen: em(640) !default;
-  $large-screen: em(860) !default; 
-
-  p {
-    line-height: 1.5em;
-  }
-
-  a {
-    text-decoration: none;
-  }
+  $base-border-radius: 3px !default;
+  $base-accent-color: #477DCA !default;
+  $large-screen: em(860) !default;
   //////////////////////////////////////////////////////////////////////////////////
 
-  $grid-items-background: $base-background-color;
-  $grid-item-background: desaturate($base-accent-color, 1%);
-  $grid-item-colors: 
-    desaturate($base-accent-color, 10%), 
-    $ocs-red, 
-    $ocs-black,
-    $ocs-black,
-    $ocs-red, 
-    $ocs-black,
-    $ocs-red;
-  $grid-item-border-size: 9px;
-  $grid-item-columns: 4;
-  $grid-item-big-columns: 8;
-  $grid-item-color: white;
-  $grid-item-height: 14em;
+  $hero-background-top: #7F99BE; 
+  $hero-background-bottom: #20392B;
+  $hero-color: white;
+  $gradient-angle: 10deg;
+  $hero-image: '../css/bgimg/hero1.jpg';
 
-  @include clearfix;
-    
-  .grid-item {
-    @include transition (all 0.2s ease-in-out);
-    background: $grid-item-background;
-    border-bottom: $grid-item-border-size solid $grid-items-background;
-    border-left: ($grid-item-border-size / 2) solid $grid-items-background;
-    border-right: ($grid-item-border-size / 2) solid $grid-items-background;
-    border-top: 0;
-    cursor: pointer;
-    float: left;
-    height: $grid-item-height;
-    overflow: hidden;
-    outline: none;
-    padding: 2em;
+  @include background(url($hero-image), linear-gradient($gradient-angle, $hero-background-bottom, $hero-background-top), no-repeat center $hero-background-top scroll);
+  background-color: #324766;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 3em;
+
+  .hero-logo img {
+    height: 4em;
+    margin-bottom: 2em;
+  }
+
+  .hero-inner {
+    @include outer-container;
+    @include clearfix;
+    color: $hero-color;
+    margin: auto;
+    padding: 3.5em;
     text-align: center;
-    width: 100%;
 
-    @include media($large-screen) {
-      @include grid-item-columns($grid-item-columns);
-    }
-
-    @for $i from 1 through length($grid-item-colors) { // assign colors from $grid-item-colors list
-      &:nth-child(#{$i}) {
-        $background-from-list: nth($grid-item-colors, $i);
-        background-color: $background-from-list;
-        box-shadow: inset 0px 0px 2px 3px darken($background-from-list, 5%);
-
-        &:focus,
-        &:hover {
-          background-color: darken($background-from-list, 90%);
-          background-repeat: no-repeat;
-          background-position: top;
-          background-size: cover;
-        }
-      }
-    }
-  }
-
-
-  .grid-item img {
-      display: block;
-      @include size(5em);
-      margin-bottom: 1em;
-      margin: auto;
-    }
-
-  #business img {
-      @include size(5em);  }
-
-  .grid-item h1 {
-      color: $grid-item-color;
-      font-size: 2em;
-      margin-bottom: 0.4em;
-    }
-
-  .grid-item p {
-      font-size: 1.2em;
-      margin: auto;
-      color: transparentize($grid-item-color, 0.3);
+    .hero-copy {
+      text-align: center;
       
-      @include media($medium-screen) {
-        max-width: 70%;
+      h1 {
+        font-size: 1.6em;
+        margin-bottom: 0.5em;
+
+        @include media($large-screen) {
+          font-size: 1.8em;
+        }
+      }
+
+      p {
+        font-weight: 200;
+        line-height: 1.4em;
+        margin: 0 auto 3em auto; 
+
+        @include media($large-screen) {
+          font-size: 1.1em;
+          max-width: 40%;
+        }
       }
     }
 
-  .grid-item-big {
-    @include media($large-screen) {
-      @include grid-item-columns($grid-item-big-columns);
-    }
-    p {
-      @include media($medium-screen) {
-        max-width: 60%;
-      }  
+    button {
+      @include button(flat, $base-accent-color);
+      padding: 0.7em 1em;
     }
   }
-
-  .grid-item-image {
-    background: url("../css/bgimg/coffeeshop.jpg");
-    background-color: $grid-item-background;
-    background-position: middle;
-    background-repeat: no-repeat;
-    background-size: cover;
-    
-    &:focus,
-    &:hover {
-          background: none;
-          background-color: darken($ocs-red, 100%);
-          background-repeat: no-repeat;
-          background-position: top;
-          background-size: cover;
-        }
-  }
-}
-#black h1 p {
-    color: $ocs-black;
-}
-
-#test {
-  width: 50px;
 }
